# StripeAppTest

./: .dockerignore  Dockerfile  Makefile  README.MD  docker-compose-dev.yml  docker-compose.yml  nginx.conf  pyproject.toml
app/: settings.py  urls.py
config/: create_admin.sh  nginx.conf
dev/: docker-compose.yml
staticfiles/: home.css  home.js  script.js
stripeapp/: admin.py  apps.py  dal.py  datamodels.py  models.py  services.py  urls.py  views.py
stripeapp/migrations/: 0001_initial.py  0002_discount_tax_alter_item_price_order.py  0003_remove_discount_applies_to_discount_duration_and_more.py  0004_tax_metadata_alter_discount_metadata_and_more.py  0005_rename_discounts_order_discount_and_more.py
stripeapp/paymentAPI/: exception.py  manager.py
stripeapp/signals/: consumer.py
stripeapp/static/: script.js  style.css
stripeapp/templates/: home.html  index.html
stripeapp/templatetags/: custom_filter.py
stripeapp/tests/: conftest.py  docker-compose-test.yml  docker-compose.yml  settings.py  test_consumer.py  test_dal.py  test_datamodels.py  test_manager.py
